--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-.start-screen {
+/*============= shared by all screens =============*/
+.main-screen {
   display: flex;
   flex-direction: column;
   justify-content: center; /*y axis!! */
@@ -7,6 +8,7 @@
   width: 100%;
 }
 
+/*============= start screen =============*/
 .app-title {
   margin-bottom: 11%;
 }
@@ -15,3 +17,24 @@
   width: 40%;
   height: 70px;
 }
+
+/*============= question screen =============*/
+.country {
+  margin-bottom: 11%;
+}
+
+.question-screen-btns {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center; /*y axis!! */
+  align-items: center; /*x axis!! */
+  gap: 20%;
+}
+
+.question-screen-btns > button {
+  font-size: 30px;
+  padding: 30px
+}
+
+/*============= answer screeen =============*/
