--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 
 .question-screen-btns > button {
   font-size: 30px;
-  padding: 30px
+  padding: 30px;
 }
 
 /*============= answer screeen =============*/
