--- a/src/App.css
+++ b/src/App.css
@@ -46,11 +46,15 @@ body {
   background-color: #e76f51;
 }
 
-.start-colours, .colours1, .colours2, .colours3, .colours4 {
+.start-colours,
+.colours1,
+.colours2,
+.colours3,
+.colours4 {
   transition-property: background-color;
   transition-duration: 0.5s;
   transition-timing-function: ease-in-out;
-  transition-delay: 0s;  
+  transition-delay: 0s;
 }
 
 button {
@@ -122,7 +126,7 @@ button {
 .question-screen-btns > button {
   font-size: 30px;
   padding: 30px;
-  width: 50%
+  width: 50%;
 }
 
 /*============= answer screeen =============*/
