--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ button {
   color: #36395a;
   cursor: pointer;
   display: inline-flex;
-  height: 48px;
+  height: 100px;
   justify-content: center;
   line-height: 1;
   list-style: none;
@@ -85,8 +85,7 @@ button {
 
 /*============= shared by all screens =============*/
 .main-screen {
-  color: white;
-  font-size: 1.5rem;
+  color: white;  
   display: flex;
   flex-direction: column;
   justify-content: center; /*y axis!! */
@@ -95,27 +94,31 @@ button {
   width: 100%;
 }
 
-/*============= start screen =============*/
-.app-title {
+h1 {
+  font-size: 4.5rem;
+  font-weight: 700;  
   margin-bottom: 150px;
+  text-align: center;
+  max-width: 90%;
 }
 
+/*============= start screen =============*/
+
 .start-btn {
-  width: 200px;
-  font-size: 30px;
+  width: 400px;
+  height: 100px;
+  font-size: 40px;
   padding: 30px;
 }
 
 /*============= question screen =============*/
-.country {
-  margin-bottom: 150px;
-  text-align: center;
+.country {  
   -webkit-animation: fade-in 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   animation: fade-in 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .question-screen-btns {
-  width: 550px;
+  width: 600px;
   display: flex;
   flex-direction: row;
   justify-content: center; /*y axis!! */
@@ -124,15 +127,14 @@ button {
 }
 
 .question-screen-btns > button {
-  font-size: 30px;
+  font-size: 35px;
   padding: 30px;
   width: 50%;
+  height: 100px;
 }
 
 /*============= answer screeen =============*/
-.answer {
-  margin-bottom: 150px;
-  text-align: center;
+.answer {  
   -webkit-animation: fade-in 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
   animation: fade-in 0.7s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
@@ -142,7 +144,19 @@ button {
   padding: 30px;
 }
 
+/*============= finish screeen =============*/
 .reset-btn {
   font-size: 30px;
   padding: 30px;
+}
+
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 6.5rem;
+  }  
+  .question-screen-btns {
+    gap: 10%;
+    padding: 20px;
+  }
 }
