--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,7 @@ h1 {
 }
 
 .question-screen-btns > button {
+  max-width: 500px;
   font-size: 35px;
   padding: 30px;
   width: 50%;
@@ -160,15 +161,13 @@ h1 {
 
   .question-screen-btns {
     width: 80%;
+    gap: 10%;
+    padding: 14px;
   }
 
   .question-screen-btns > button {
     font-size: 50px;
     height: 150px;
-  }
-  .question-screen-btns {
-    gap: 10%;
-    padding: 14px;
   }
 
   .next-btn {
